@@ -81,9 +81,9 @@ public final class MiscTools {
      * @return The {@link LoopSpecification} for the loop statement in the given term or an empty
      *         optional if there is no specified invariant for the loop.
      */
-    public static @Nullable LoopSpecification getSpecForTermWithLoopStmt(final Term loopTerm,
+    public static @Nullable LoopSpecification getSpecForTermWithLoopStmt(final JTerm loopTerm,
             final Services services) {
-        assert loopTerm.op() instanceof Modality;
+        assert loopTerm.op() instanceof JModality;
         assert loopTerm.javaBlock() != JavaBlock.EMPTY_JAVABLOCK;
 
         final ProgramElement pe = loopTerm.javaBlock().program();
@@ -107,14 +107,14 @@ public final class MiscTools {
     }
 
     /**
-     * Checks whether the given {@link Modality.JavaModalityKind} is a
+     * Checks whether the given {@link JModality.JavaModalityKind} is a
      * transaction modality.
      *
      * @param modalityKind The modality to check.
-     * @return true iff the given {@link Modality.JavaModalityKind} is a
+     * @return true iff the given {@link JModality.JavaModalityKind} is a
      *         transaction modality.
      */
-    public static boolean isTransaction(final Modality.JavaModalityKind modalityKind) {
+    public static boolean isTransaction(final JModality.JavaModalityKind modalityKind) {
         return modalityKind.transaction();
     }
 
@@ -128,7 +128,7 @@ public final class MiscTools {
      * @return The list of the applicable heaps for the given scenario.
      */
     public static List<LocationVariable> applicableHeapContexts(
-            Modality.JavaModalityKind modalityKind,
+            JModality.JavaModalityKind modalityKind,
             Services services) {
         final List<LocationVariable> result = new ArrayList<>();
 
@@ -164,7 +164,7 @@ public final class MiscTools {
      * @return the receiver term of the passed method frame, or null if the frame belongs to a
      *         static method.
      */
-    public static Term getSelfTerm(MethodFrame mf, Services services) {
+    public static JTerm getSelfTerm(MethodFrame mf, Services services) {
         ExecutionContext ec = (ExecutionContext) mf.getExecutionContext();
         ReferencePrefix rp = ec.getRuntimeInstance();
         if (!(rp instanceof TypeReference) && rp != null) {
@@ -238,13 +238,13 @@ public final class MiscTools {
      * @param t the term for which we want to collect the observer functions.
      * @return the observers as a set of pairs with sorts and according observers
      */
-    public static ImmutableSet<Pair<Sort, IObserverFunction>> collectObservers(Term t) {
+    public static ImmutableSet<Pair<Sort, IObserverFunction>> collectObservers(JTerm t) {
         ImmutableSet<Pair<Sort, IObserverFunction>> result = DefaultImmutableSet.nil();
         if (t.op() instanceof IObserverFunction obs) {
             final Sort s = obs.isStatic() ? obs.getContainerType().getSort() : t.sub(1).sort();
             result = result.add(new Pair<>(s, obs));
         }
-        for (Term sub : t.subs()) {
+        for (JTerm sub : t.subs()) {
             result = result.union(collectObservers(sub));
         }
         return result;
@@ -290,21 +290,6 @@ public final class MiscTools {
     // =======================================================
     // Methods operating on Strings
     // =======================================================
-
-    /**
-     * Separates the single directory entries in a filename. The first element is an empty String
-     * iff the filename is absolute. (For a Windows filename, it contains a drive letter and a
-     * colon). Ignores double slashes and slashes at the end, removes references to the cwd. E.g.,
-     * "/home//daniel/./key/" yields {"","home","daniel","key"}. Tries to automatically detect UNIX
-     * or Windows directory delimiters. There is no check whether all other characters are valid for
-     * filenames.
-     *
-     * @param filename a file name.
-     * @return all directory entries in the file name.
-     */
-    static List<String> disectFilename(String filename) {
-        return Filenames.disectFilename(filename);
-    }
 
     /**
      * Returns a filename relative to another one. The second parameter needs to be absolute and is
@@ -653,11 +638,11 @@ public final class MiscTools {
         }
     }
 
-    public static ImmutableList<Term> toTermList(Iterable<LocationVariable> list, TermBuilder tb) {
-        ImmutableList<Term> result = ImmutableSLList.nil();
+    public static ImmutableList<JTerm> toTermList(Iterable<LocationVariable> list, TermBuilder tb) {
+        ImmutableList<JTerm> result = ImmutableSLList.nil();
         for (var pv : list) {
             if (pv != null) {
-                Term t = tb.var(pv);
+                JTerm t = tb.var(pv);
                 result = result.append(t);
             }
         }
@@ -681,10 +666,10 @@ public final class MiscTools {
         return sb.toString();
     }
 
-    public static ImmutableList<Term> filterOutDuplicates(ImmutableList<Term> localIns,
-            ImmutableList<Term> localOuts) {
-        ImmutableList<Term> result = ImmutableSLList.nil();
-        for (Term localIn : localIns) {
+    public static ImmutableList<JTerm> filterOutDuplicates(ImmutableList<JTerm> localIns,
+            ImmutableList<JTerm> localOuts) {
+        ImmutableList<JTerm> result = ImmutableSLList.nil();
+        for (JTerm localIn : localIns) {
             if (!localOuts.contains(localIn)) {
                 result = result.append(localIn);
             }
@@ -731,27 +716,27 @@ public final class MiscTools {
 
         try {
             return switch (loc.getType()) {
-            case "URL" -> // URLDataLocation
-                Optional.of(((URLDataLocation) loc).url().toURI());
-            case "ARCHIVE" -> { // ArchiveDataLocation
-                // format: "ARCHIVE:<filename>?<itemname>"
-                ArchiveDataLocation adl = (ArchiveDataLocation) loc;
+                case "URL" -> // URLDataLocation
+                    Optional.of(((URLDataLocation) loc).url().toURI());
+                case "ARCHIVE" -> { // ArchiveDataLocation
+                    // format: "ARCHIVE:<filename>?<itemname>"
+                    ArchiveDataLocation adl = (ArchiveDataLocation) loc;
 
-                // extract item name and zip file
-                int qmindex = adl.toString().lastIndexOf('?');
-                String itemName = adl.toString().substring(qmindex + 1);
-                ZipFile zip = adl.getFile();
+                    // extract item name and zip file
+                    int qmindex = adl.toString().lastIndexOf('?');
+                    String itemName = adl.toString().substring(qmindex + 1);
+                    ZipFile zip = adl.getFile();
 
-                // use special method to ensure that path separators are correct
-                yield Optional.of(getZipEntryURI(zip, itemName));
-            }
-            case "FILE" -> // DataFileLocation
-                // format: "FILE:<path>"
-                Optional.of(((DataFileLocation) loc).getFile().toURI());
-            default -> // SpecDataLocation
-                // format "<type>://<location>"
-                // wrap into URN to ensure URI encoding is correct (no spaces!)
-                Optional.empty();
+                    // use special method to ensure that path separators are correct
+                    yield Optional.of(getZipEntryURI(zip, itemName));
+                }
+                case "FILE" -> // DataFileLocation
+                    // format: "FILE:<path>"
+                    Optional.of(((DataFileLocation) loc).getFile().toURI());
+                default -> // SpecDataLocation
+                    // format "<type>://<location>"
+                    // wrap into URN to ensure URI encoding is correct (no spaces!)
+                    Optional.empty();
             };
         } catch (URISyntaxException | IOException e) {
             throw new IllegalArgumentException(
@@ -869,49 +854,49 @@ public final class MiscTools {
             schemeSpecPart = m.group(2);
         }
         switch (scheme) {
-        case "URL" -> {
-            // schemeSpecPart actually contains a URL again
-            return new URL(schemeSpecPart);
-        }
-        case "ARCHIVE" -> {
-            // format: "ARCHIVE:<filename>?<itemname>"
-            // extract item name and zip file
-            int qmindex = schemeSpecPart.lastIndexOf('?');
-            String zipName = schemeSpecPart.substring(0, qmindex);
-            String itemName = schemeSpecPart.substring(qmindex + 1);
-            try {
-                ZipFile zip = new ZipFile(zipName);
-                // use special method to ensure that path separators are correct
-                return getZipEntryURI(zip, itemName).toURL();
-            } catch (IOException e) {
-                MalformedURLException me =
-                    new MalformedURLException(input + " does not contain a valid URL");
-                me.initCause(e);
-                throw me;
+            case "URL" -> {
+                // schemeSpecPart actually contains a URL again
+                return new URL(schemeSpecPart);
             }
-        }
-        case "FILE" -> {
-            // format: "FILE:<path>"
-            Path path = Paths.get(schemeSpecPart).toAbsolutePath().normalize();
-            return path.toUri().toURL();
-        }
-        case "" -> {
-            // only file/path without protocol
-            Path p = Paths.get(input).toAbsolutePath().normalize();
-            return p.toUri().toURL();
-        }
-        default -> {
-            // may still be Windows path starting with <drive_letter>:
-            if (scheme.length() == 1) {
-                // TODO: Theoretically, a protocol with only a single letter is allowed.
-                // This (very rare) case currently is not handled correctly.
-                Path windowsPath = Paths.get(input).toAbsolutePath().normalize();
-                return windowsPath.toUri().toURL();
+            case "ARCHIVE" -> {
+                // format: "ARCHIVE:<filename>?<itemname>"
+                // extract item name and zip file
+                int qmindex = schemeSpecPart.lastIndexOf('?');
+                String zipName = schemeSpecPart.substring(0, qmindex);
+                String itemName = schemeSpecPart.substring(qmindex + 1);
+                try {
+                    ZipFile zip = new ZipFile(zipName);
+                    // use special method to ensure that path separators are correct
+                    return getZipEntryURI(zip, itemName).toURL();
+                } catch (IOException e) {
+                    MalformedURLException me =
+                        new MalformedURLException(input + " does not contain a valid URL");
+                    me.initCause(e);
+                    throw me;
+                }
             }
-            // otherwise call URL constructor
-            // if this also fails, there is an unknown protocol -> MalformedURLException
-            return new URL(input);
-        }
+            case "FILE" -> {
+                // format: "FILE:<path>"
+                Path path = Paths.get(schemeSpecPart).toAbsolutePath().normalize();
+                return path.toUri().toURL();
+            }
+            case "" -> {
+                // only file/path without protocol
+                Path p = Paths.get(input).toAbsolutePath().normalize();
+                return p.toUri().toURL();
+            }
+            default -> {
+                // may still be Windows path starting with <drive_letter>:
+                if (scheme.length() == 1) {
+                    // TODO: Theoretically, a protocol with only a single letter is allowed.
+                    // This (very rare) case currently is not handled correctly.
+                    Path windowsPath = Paths.get(input).toAbsolutePath().normalize();
+                    return windowsPath.toUri().toURL();
+                }
+                // otherwise call URL constructor
+                // if this also fails, there is an unknown protocol -> MalformedURLException
+                return new URL(input);
+            }
         }
     }
 }
